[package]
name = "memoffset"
version = "0.9.1"
authors = ["Gilad Naaman <gilad.naaman@gmail.com>"]
description = "offset_of functionality for Rust structs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Gilnaa/memoffset"
keywords = ["mem", "offset", "offset_of", "offsetof"]
categories = ["no-std"]

[dependencies]
# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.101", optional = true }

[build-dependencies]
autocfg = "1"

[dev-dependencies]
doc-comment = "0.3"

[features]
default = []
# NOP features, solely so that people do not have to change their Cargo.toml
unstable_offset_of = []
unstable_const = []

rustc-dep-of-std = [
    "dep:core",
    "compiler_builtins",
]
